grafana/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`grafana.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: grafana-service
      port: http-grafana
